demo/eshop-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-auth
spec:
  replicas: 1
  selector:
    matchLabels:
        app: eshop-auth
  template:
    metadata:
      labels:
        app: eshop-auth
    spec:
      containers:
      - name: eshop-auth
        image: mycat/eshop-auth-image:v2
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /opt/app/eshop_service/config
        ports:
          - containerPort: 8034
      volumes:
      - name: config
        configMap:
          name: eshop-auth-config
          items:
            - key: application-auth.yml
              path: application.yml
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-auth-svc
spec:
  type: ClusterIP
  selector:
    app: eshop-auth
  ports:
  - port: 8034
    targetPort: 8034
