demo/eshop-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshop-redis
spec:
  replicas: 1
  selector:
    matchLabels:
        app: eshop-redis
  template:
    metadata:
      labels:
        app: eshop-redis
    spec:
      containers:
      - name: redis
        image: docker.io/redis:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-redis-svc
spec:
  type: ClusterIP
  selector:
    app: eshop-redis
  ports:
  - port: 6379 
    targetPort: 6379
