demo/eshop-gateway-2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eshop-cart-svc
spec:
  hosts:
    - eshop-cart-svc
  http:
  - route:
    - destination:
        host: eshop-cart-svc
        subset: v1
      weight: 50
    - destination:
        host: eshop-cart-svc
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: eshop-cart-rule
spec:
  host: eshop-cart-svc
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
