demo/eshop-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: eshop-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eshop-web
spec:
  hosts:
  - "*"
  gateways:
  - eshop-gateway
  http:
  - route:
    - destination:
        host: eshop-web-svc
        port:
          number: 8033
